@@ -49,7 +49,7 @@ export(.checkMFClasses, .getXlevels, .MFclass, .nknots.smspl,
        napredict, naprint, naresid, nextn, nlm, nlminb, nls,
        nls.control, NLSstAsymptotic, NLSstClosestX, NLSstLfAsymptote,
        NLSstRtAsymptote, nobs, numericDeriv, offset, optim, optimHess,
-       optimise, optimize, order.dendrogram, p.adjust,
+       optimise, optimize, order.dendrogram, Pair, p.adjust,
        p.adjust.methods, pacf, pairwise.table, pbeta, pbinom, pcauchy,
        pchisq, pexp, pf, pgamma, pgeom, phyper, plclust, plnorm,
        plogis, pnbinom, pnorm, poisson, poly, polym, power, ppoints,
